--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@apps/website",
+  "name": "@aws-samples/website",
   "version": "1.0.0",
   "description": "Route Optimizaion - Web App",
   "author": "Amazon Web Services - Prototyping Team",
