--- a/packages/@infra/data-storage/package.json
+++ b/packages/@infra/data-storage/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@infra/data-storage",
+  "name": "@aws-samples/data-storage",
   "description": "Data storage nested stack",
   "version": "0.0.0-alpha.0",
   "license": "MIT-0",
@@ -21,7 +21,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "@infra/common": "^0.0.0-alpha.0"
+    "@aws-samples/common": "^0.0.0-alpha.0"
   },
   "peerDependencies": {
     "aws-cdk-lib": "^2.59.0",
