--- a/apps/infra/package.json
+++ b/apps/infra/package.json
@@ -34,11 +34,11 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
-    "@infra/api-web": "0.0.0-alpha.0",
-    "@infra/cognito-auth": "0.0.0-alpha.0",
-    "@infra/common": "0.0.0-alpha.0",
-    "@infra/data-storage": "0.0.0-alpha.0",
-    "@infra/web-hosting": "0.0.0-alpha.0",
+    "@aws-samples/api-web": "0.0.0-alpha.0",
+    "@aws-samples/cognito-auth": "0.0.0-alpha.0",
+    "@aws-samples/common": "0.0.0-alpha.0",
+    "@aws-samples/data-storage": "0.0.0-alpha.0",
+    "@aws-samples/web-hosting": "0.0.0-alpha.0",
     "@types/jest": "^27.0.3",
     "@types/node": "^16.11.10",
     "@typescript-eslint/typescript-estree": "^5.10.0",
