--- a/packages/@config/eslint/package.json
+++ b/packages/@config/eslint/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@config/eslint",
+  "name": "@aws-samples/eslint",
   "version": "0.0.1",
   "description": "ESLint config",
   "main": "index.js",
